# online-test-web

./: LICENSE  design_document.md  docker-compose.yml
backend/: .env.example  pyproject.toml  run.py  test_connection.py
backend/api/: admin_routes.py  quiz_routes.py
backend/utils/: config.py  extensions.py  models.py
frontend-admin/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend-admin/src/: App.jsx
frontend-admin/src/components/: QuestionForm.jsx  QuestionList.jsx  Results.jsx
frontend-quiz/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend-quiz/src/: App.jsx  main.jsx
frontend-quiz/src/components/: HomePage.jsx  InstructionPage.jsx  LanguageSelector.jsx  QuizPage.jsx  ResultPage.jsx  UserInfoPage.jsx
frontend-quiz/src/contexts/: LanguageContext.jsx
frontend-quiz/src/locales/: translations.js
migrations/versions/: d39caca1ccb7_modify_schema.py
