[project]
name = "test-web"
version = "0.1.0"
description = "線上空間能力測驗系統"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "Flask>=3.1.0",
    "Flask-SQLAlchemy>=3.1.1",
    "Flask-CORS>=5.0.0",
    "psycopg[binary]>=3.2.3",
    "python-dotenv>=1.0.1",
    "flask-migrate>=4.1.0",
    "pytz>=2025.2",
]
